docs: full implementation-ready cluster management spec (#74)